syntax = "proto3";

package connector_service;

import "catalog.proto";
import "common.proto";
import "data.proto";
import "plan_common.proto";

option java_outer_classname = "ConnectorServiceProto";
option java_package = "com.risingwave.proto";

message TableSchema {
  repeated plan_common.ColumnDesc columns = 1;
  repeated uint32 pk_indices = 2;
}

message ValidationError {
  string error_message = 1;
}

message SinkParam {
  uint32 sink_id = 1;
  map<string, string> properties = 2;
  TableSchema table_schema = 3;
  catalog.SinkType sink_type = 4; // to be deprecated
  string db_name = 5;
  string sink_from_name = 6;
  catalog.SinkFormatDesc format_desc = 7;
  optional string sink_into_name = 8;
}

enum SinkPayloadFormat {
  FORMAT_UNSPECIFIED = 0;
  JSON = 1;
  STREAM_CHUNK = 2;
}

message SinkWriterStreamRequest {
  message StartSink {
    SinkParam sink_param = 1;
    SinkPayloadFormat format = 2;
  }

  message BeginEpoch {
    uint64 epoch = 1;
  }

  message WriteBatch {
    message JsonPayload {
      message RowOp {
        data.Op op_type = 1;
        string line = 2;
      }
      repeated RowOp row_ops = 1;
    }

    message StreamChunkPayload {
      bytes binary_data = 1;
    }

    oneof payload {
      JsonPayload json_payload = 1;
      StreamChunkPayload stream_chunk_payload = 2;
    }

    uint64 batch_id = 3;
    uint64 epoch = 4;
  }

  message Barrier {
    uint64 epoch = 1;
    bool is_checkpoint = 2;
  }

  oneof request {
    StartSink start = 1;
    BeginEpoch begin_epoch = 2;
    WriteBatch write_batch = 3;
    Barrier barrier = 4;
  }
}

message SinkWriterStreamResponse {
  message StartResponse {}

  message CommitResponse {
    uint64 epoch = 1;
    SinkMetadata metadata = 2;
  }

  message BatchWrittenResponse {
    uint64 epoch = 1;
    uint64 batch_id = 2;
  }

  oneof response {
    StartResponse start = 1;
    CommitResponse commit = 2;
    BatchWrittenResponse batch = 3;
  }
}

message ValidateSinkRequest {
  SinkParam sink_param = 1;
}

message ValidateSinkResponse {
  // On validation failure, we return the error.
  ValidationError error = 1;
}

message SinkMetadata {
  message SerializedMetadata {
    bytes metadata = 1;
  }

  oneof metadata {
    SerializedMetadata serialized = 1;
  }
}

message SinkCoordinatorStreamRequest {
  message StartCoordinator {
    SinkParam param = 1;
  }

  message CommitMetadata {
    uint64 epoch = 1;
    repeated SinkMetadata metadata = 2;
  }

  oneof request {
    StartCoordinator start = 1;
    CommitMetadata commit = 2;
  }
}

message SinkCoordinatorStreamResponse {
  message StartResponse {}

  message CommitResponse {
    uint64 epoch = 1;
  }

  oneof response {
    StartResponse start = 1;
    CommitResponse commit = 2;
  }
}

/* Source Service */

message CdcMessage {
  string payload = 1;
  string partition = 2;
  string offset = 3;
  string full_table_name = 4;
}

enum SourceType {
  UNSPECIFIED = 0;
  MYSQL = 1;
  POSTGRES = 2;
  CITUS = 3;
}

message GetEventStreamRequest {
  uint64 source_id = 1;
  SourceType source_type = 2;
  string start_offset = 3;
  map<string, string> properties = 4;
  bool snapshot_done = 5;
}

message GetEventStreamResponse {
  message ControlInfo {
    bool handshake_ok = 1;
  }
  uint64 source_id = 1;
  repeated CdcMessage events = 2;
  ControlInfo control = 3;
}

message ValidateSourceRequest {
  uint64 source_id = 1;
  SourceType source_type = 2;
  map<string, string> properties = 3;
  TableSchema table_schema = 4;
}

message ValidateSourceResponse {
  // On validation failure, we return the error.
  ValidationError error = 1;
}

service ConnectorService {
  rpc SinkWriterStream(stream SinkWriterStreamRequest) returns (stream SinkWriterStreamResponse);
  rpc SinkCoordinatorStream(stream SinkCoordinatorStreamRequest) returns (stream SinkCoordinatorStreamResponse);
  rpc ValidateSink(ValidateSinkRequest) returns (ValidateSinkResponse);
  rpc GetEventStream(GetEventStreamRequest) returns (stream GetEventStreamResponse);
  rpc ValidateSource(ValidateSourceRequest) returns (ValidateSourceResponse);
}

message CoordinateRequest {
  // The first request that starts a coordination between sink writer and coordinator.
  // The service will respond after sink writers of all vnodes have sent the request.
  message StartCoordinationRequest {
    common.Buffer vnode_bitmap = 1;
    SinkParam param = 2;
  }

  message CommitRequest {
    uint64 epoch = 1;
    SinkMetadata metadata = 2;
  }

  oneof msg {
    StartCoordinationRequest start_request = 1;
    CommitRequest commit_request = 2;
  }
}

message CoordinateResponse {
  message StartCoordinationResponse {}

  message CommitResponse {
    uint64 epoch = 1;
  }

  oneof msg {
    StartCoordinationResponse start_response = 1;
    CommitResponse commit_response = 2;
  }
}

service SinkCoordinationService {
  rpc Coordinate(stream CoordinateRequest) returns (stream CoordinateResponse);
}
